welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: type mismatch;
 found   : java.awt.Color
 required: String
		col=getCouleurSol();
                                 ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
	while (!estSurBiscuit()) {
        ^